# prism

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  package-lock.json  package.json  shoot.tmp 2.mjs  shoot.tmp 3.mjs  tailwind.config.ts
.github/workflows/: build.yml  ci.yml  deploy-web.yml
docs/: AUDIT-2026-07.md
e2e/: navigation.spec.ts
extension/firefox/: README.md  background.js  manifest.json
scripts/: bundle-libmpv-macos.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  player.json
src-tauri/examples/: mpv_thread_repro.rs  torrent_spike.rs
src-tauri/src/: download_manager.rs  engine.rs  lib.rs  player.rs  torrent.rs
src/components/: ErrorBoundary.tsx
src/components/__tests__/: QueueTable.test.tsx
src/components/common/: index.tsx
src/components/dashboard/: UrlInput.tsx
src/components/layout/: AppShell.tsx
src/components/media-details/: MediaDetailsModal.tsx  PlaylistModal.tsx  TorrentFilesModal.tsx
src/components/queue/: QueueTable.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx  toaster.tsx
src/hooks/: use-clipboard-watcher.ts  use-url-drop.ts
src/lib/: deep-link-bus.ts  player-window.ts
src/pages/: About.tsx  Dashboard.tsx  Downloads.tsx  Failed.tsx  History.tsx  Library.tsx  OpenSourceLicenses.tsx  Player.tsx  Queue.tsx  Settings.tsx  Subscriptions.tsx
src/services/: ServiceProvider.tsx  crash-reporting.ts  index.ts  mock.ts  tauri.ts  types.ts  utils.ts
src/services/__tests__/: diagnostics.test.ts  utils.test.ts
src/stores/: AppProvider.tsx  SubscriptionsProvider.tsx  queue-reducer.ts  schedule.ts  subscription-check.ts
src/stores/__tests__/: queue-reducer.test.ts  schedule.test.ts  subscription-check.test.ts
src/types/: models.ts
