[package]
name = "prism"
version = "1.4.4"
description = "Prism — Premium Video Downloader"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.80"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["sync", "time", "process", "io-util"] }
opener = "0.7"
regex = "1"
chrono = "0.4"
dirs = "6"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
fs2 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
sentry = { version = "0.48", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
anyhow = "1"
# BitTorrent second-engine spike (go/no-go). See ROADMAP.md.
librqbit = "8"
